Fixes appearance on mobile devices.

--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -78,6 +78,7 @@
     }
 
     @media (max-width: $mobile-max) {
+      flex-grow: 1;
       margin-left: env(safe-area-inset-left);
       margin-right: env(safe-area-inset-right);
       margin-top: calc(44px + env(safe-area-inset-top));
@@ -92,6 +93,10 @@
       margin-left: auto;
       margin-right: auto;
       height: 100vh;
+
+      @media (max-width: $mobile-max) {
+        flex-grow: 0;
+      }
     }
   }
 
@@ -103,7 +108,7 @@
       display: flex;
       flex-grow: 0;
       flex-shrink: 0;
-      flex-direction: column;
+      flex-direction: column-reverse;
       padding-bottom: calc(5.5rem + env(safe-area-inset-bottom));
       padding-left: calc(2.1rem + env(safe-area-inset-left));
       padding-right: calc(2.1rem + env(safe-area-inset-right));
@@ -132,8 +137,9 @@
 
     &.error {
       @media (max-width: $mobile-max) {
-        width: 100%;
-        height: 100%;
+        padding-top: calc(44px + 5.5rem + env(safe-area-inset-top));
+        width: calc(100% - 2.1rem * 2 - env(safe-area-inset-left) - env(safe-area-inset-right));
+        height: calc(100% - 5.5rem * 2 - 44px - env(safe-area-inset-top) - env(safe-area-inset-bottom));
         bottom: 0;
         left: 0;
         position: absolute;
